Fixed text align, fixed background color, increased font and image size

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,4 +1,4 @@
-$regnad-color: #2e3e0b;
+$regnad-color: #008057;
 
 * {
     margin: 0rem;
@@ -16,20 +16,22 @@ body {
         right: auto;
         top: 1rem;
     }
-    max-width: 52rem;
     text-align: center;
-    align-items: center;
     #header {
         display: inline-block;
         font-family: 'Times New Roman', Times, serif;
         color: white;
-        font-size: 350%;
+        font-size: 600%;
         margin: {
             left: 1rem;
         }
+        vertical-align: middle;
+        font-weight: lighter;
+        text-shadow: 0.2rem 0.2rem 0rem rgba(0, 0, 0, 1);
     }
     img {
-        max-width: 6rem;
+        width: 8rem;
         display: inline-block;
+        vertical-align: middle;
     }
 }
